--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "third_party/zlib-ng"]
 	path = third_party/zlib-ng
 	url = https://git@github.com/zlib-ng/zlib-ng
+[submodule "third_party/editline"]
+	path = third_party/editline
+	url = git@github.com:troglobit/editline
