python/Makefile: Use --break-system-packages in make install.

--- a/python/Makefile
+++ b/python/Makefile
@@ -35,11 +35,11 @@ lint:
 
 .PHONY: install
 install: $(WHEEL_PATH) | uninstall
-	sudo $(PYTHON) -m pip install $(WHEEL_PATH)
+	sudo $(PYTHON) -m pip install $(WHEEL_PATH) --break-system-packages
 
 .PHONY: uninstall
 uninstall:
-	sudo $(PYTHON) -m pip uninstall -y $(MODULE)
+	sudo $(PYTHON) -m pip uninstall -y $(MODULE) --break-system-packages
 
 .PHONY: packages
 packages: $(WHEEL_PATH)
