simple_tsdb/.pylintrc: Allow more than 1000 lines in a module.

--- a/python/simple_tsdb/.pylintrc
+++ b/python/simple_tsdb/.pylintrc
@@ -19,4 +19,5 @@ disable=missing-module-docstring,
         superfluous-parens,
         consider-using-f-string,
         too-many-return-statements,
-        too-many-positional-arguments
+        too-many-positional-arguments,
+        too-many-lines
