tsdbserver/reflector.cc: Refactor to use similar arguments and parameters as tsdbserver; find reflector.cfg based on root dir.

--- a/etc/systemd/system/tsdbreflector.service
+++ b/etc/systemd/system/tsdbreflector.service
@@ -5,7 +5,7 @@ After=network-online.target
 [Service]
 User=simple_tsdb
 Group=simple_tsdb
-ExecStart=/usr/local/bin/tsdbreflector --root /var/lib/simple_tsdb/ --no-debug --unbuffered --reflector-cfg /var/lib/simple_tsdb/reflector.cfg
+ExecStart=/usr/local/bin/tsdbreflector --root /var/lib/simple_tsdb/ --no-debug --unbuffered
 Restart=on-failure
 
 [Install]
